kubernetes/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  labels:
    app: nginx-ingress
    tier: frontend
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: laravel.kube
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
